--- a/jira-webapp/Gemfile
+++ b/jira-webapp/Gemfile
@@ -45,3 +45,9 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+#To help with the dropdown firing AJAX
+gem 'bootstrap', '~> 4.0.0.alpha3'
+gem 'autoprefixer-rails'
+# Use jquery as the JavaScript library
+gem 'jquery-rails'
